Fix layouts for different screen sizes. - Fix the hamburger menu to the top along with the menu bar. - Remove literal min-width values. - Add a different layout for directory items on small screens. - Make the disabled state of the District filter more obvious.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
 
 input,
 select {
-    @apply rounded-lg border border-gray-400 px-3 py-2 shadow-inner focus:outline-yellow-900;
+    @apply rounded-lg border border-gray-400 bg-gray-100 px-3 py-2 shadow-inner focus:outline-yellow-900 disabled:border-gray-100 disabled:bg-gray-200 disabled:opacity-40;
 }
 
 label {
